--- a/css/index.css
+++ b/css/index.css
@@ -72,7 +72,7 @@ body {
 
 body:before {
   content: "";
-  width: 100vw;
+  width: 100%;
   height: 4.69vh;
   display: inline-block;
   top: 0px;
@@ -117,7 +117,7 @@ body:before {
 .footer__adv {
   background: #222224;
   height: fit-content;
-  width: 100vw;
+  width: 100%;
 }
 
 .footer__adv_item > h3 {
@@ -168,7 +168,7 @@ body:before {
 
 .subscribe {
   height: fit-content;
-  width: 100vw;
+  width: 100%;
   background: linear-gradient(rgba(244, 244, 244, 0.7) 100%, rgba(0, 0, 0, 0.5) 0%), url(../img/subscribe_background.svg);
   background-size: cover;
 }
@@ -301,7 +301,7 @@ body:before {
 
 .footer_end {
   background: #222224;
-  width: 100vw;
+  width: 100%;
 }
 
 @media (max-width: 768px) {
@@ -641,14 +641,6 @@ div.header__navbar_control * {
 
 body {
   margin-top: 0px;
-}
-
-body:before {
-  content: "";
-  width: 100vw;
-  height: 4.69vh;
-  display: inline-block;
-  top: 0px;
 }
 
 @media (max-width: 768px) {
