--- a/css/registration.css
+++ b/css/registration.css
@@ -73,7 +73,7 @@ body {
 
 body:before {
   content: "";
-  width: 100vw;
+  width: 100%;
   height: 4.69vh;
   display: inline-block;
   top: 0px;
@@ -166,7 +166,7 @@ body:before {
 .footer__adv {
   background: #222224;
   height: fit-content;
-  width: 100vw;
+  width: 100%;
 }
 
 .footer__adv_item > h3 {
@@ -217,7 +217,7 @@ body:before {
 
 .subscribe {
   height: fit-content;
-  width: 100vw;
+  width: 100%;
   background: linear-gradient(rgba(244, 244, 244, 0.7) 100%, rgba(0, 0, 0, 0.5) 0%), url(../img/subscribe_background.svg);
   background-size: cover;
 }
@@ -350,7 +350,7 @@ body:before {
 
 .footer_end {
   background: #222224;
-  width: 100vw;
+  width: 100%;
 }
 
 @media (max-width: 768px) {
