--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -3,7 +3,7 @@
 .footer__adv {
 	background: #222224;
 	height: fit-content;
-	width: 100vw;
+	width: 100%;
 }
 
 
@@ -58,7 +58,7 @@
 
 .subscribe {
 	height: fit-content;
-	width: 100vw;
+	width: 100%;
 	background: linear-gradient(rgba(244, 244, 244, 0.7) 100%, rgba(0, 0, 0, 0.5)0%), url(../img/subscribe_background.svg);
 	background-size: cover;
 }
@@ -200,7 +200,7 @@
 
 .footer_end {
 	background: #222224;
-	width: 100vw;
+	width: 100%;
 }
 
 @media (max-width: 768px) {
