--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -75,7 +75,7 @@ body {
 
 body:before {
 	content: '';
-	width: 100vw;
+	width: 100%;
 	height: 4.69vh;
 	display: inline-block;
 	top: 0px;
