--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -318,13 +318,13 @@ body {
 	margin-top: 0px;
 }
 
-body:before {
-	content: '';
-	width: 100vw;
-	height: 4.69vh;
-	display: inline-block;
-	top: 0px;
-}
+// body:before {
+// 	content: '';
+// 	width: 100vw;
+// 	height: 4.69vh;
+// 	display: inline-block;
+// 	top: 0px;
+// }
 
 @media (max-width: 768px) {
 
